# mac-media-importer-organizer

./: .gitignore  CHANGELOG.md  README.md  init.rb  media_organizer.command  pyproject.toml  requirements.txt  setup.py
cfg/: requirements.txt
lib/: backer_upper.rb  logger.rb  media_importer.rb  printer.rb  volumes.rb
mediamantis/: __init__.py  archiver.py  directories.py  exceptions.py  importer.py  mantisreader.py  mantistypes.py  mediafile.py  mediamantis.py  mega.py  settings.py  threads.py  version.py  zip.py
scripts/: aws_import.sh  mantis_importer.sh  mega_uploader.sh
